--- a/styles/assets.css
+++ b/styles/assets.css
@@ -1,15 +1,27 @@
 .note {
-    padding: 16px;
+    padding: 8px;
     background-color: coral;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
 #inpNewNote {
     margin: 16px;
-    padding: 16px;
+    padding: 8px;
 }
 
 button {
     margin: 16px;
-    padding: 16px;
+    padding: 8px;
+}
+
+.closeBtn {
+    background-color: rgba(255, 255, 255, 0.4);
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 8px;
+    margin: 0px;
+}
+
+.closeBtn:hover {
+    background-color: red;
+    color: white;
 }
