--- a/styles/assets.css
+++ b/styles/assets.css
@@ -4,7 +4,8 @@
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
 }
 
-#inpNewNote {
+#inpNewNote,
+#inpNewNoteTitle {
     margin: 16px;
     padding: 8px;
 }
