add: Commentar zur struktur

--- a/styles/assets.css
+++ b/styles/assets.css
@@ -1,3 +1,5 @@
+/* Style hier wiederverwendbare Elemente wie bestimmte buttons oder andere Elemente, die auf mehreren Seiten auftauchen könnten */
+
 .note {
     padding: 8px;
     background-color: coral;
