--- a/styles/assets.css
+++ b/styles/assets.css
@@ -1,11 +1,4 @@
 /* Style hier wiederverwendbare Elemente wie bestimmte buttons oder andere Elemente, die auf mehreren Seiten auftauchen könnten */
-
-.note {
-    padding: 8px;
-    background-color: coral;
-    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-}
-
 #inpNewNote,
 #inpNewNoteTitle {
     margin: 16px;
@@ -13,18 +6,34 @@
 }
 
 button {
-    margin: 16px;
     padding: 8px;
+    cursor: pointer;
 }
 
-.closeBtn {
+.stdBtn {
     background-color: rgba(255, 255, 255, 0.4);
     border: 1px solid rgba(0, 0, 0, 0.2);
-    padding: 8px;
-    margin: 0px;
+    padding: 8px 16px;
+    border-radius: 8px;
 }
 
-.closeBtn:hover {
+.stdBtn:hover {
+    color: white;
+}
+
+.deleteBtn:hover {
     background-color: red;
+}
+
+.trashBtn:hover {
+    background-color: orange;
+}
+
+.archiveBtn:hover {
+    background-color: blue;
+}
+
+.noteBtn:hover {
+    background-color: green;
     color: white;
 }
