--- a/styles/standard.css
+++ b/styles/standard.css
@@ -8,8 +8,23 @@
 
 body {
     scroll-behavior: smooth;
+    padding: 32px;
 }
 
 a {
     text-decoration: none;
+}
+
+h1 {
+    font-size: 50px;
+}
+
+h2 {
+    font-size: 40px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+h3 {
+    font-size: 30px;
 }
