--- a/styles/note.css
+++ b/styles/note.css
@@ -1,10 +1,23 @@
 .note {
-    background-color: salmon;
+
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     display: flex;
     justify-content: space-between;
     max-width: 300px;
     min-width: 250px;
+    color: white;
+}
+
+.normalNote {
+    background-color: green;
+}
+
+.trashNote {
+    background-color: orange;
+}
+
+.archiveNote {
+    background-color: blue;
 }
 
 .note__info {
